@@ -7,6 +7,7 @@ Changelog for 1.3.10
 * Fixes for POS cashier permissions.  (Chris T)
 * More Localization Fixes (Herman V)
 * Customer/Vendor Search now shows records without credit accounts (Herman V)
+* Better error handling contrib modules not found (Chris T)
 
 Changelog for 1.3.9
 * More logging enhancements (Herman V)
